<resources>
    <!-- Change App Name -->
    <string name="app_name">teleBang</string>

    <!-- Change AdMob Banner Id -->
    <string name="banner_ad_unit_id">ca-app-pub-8000676937410247/5916810013</string>

    <!-- Change AdMob Interstitial Id -->
    <string name="interstitial_ad_unit_id">ca-app-pub-8000676937410247/2823742819</string>

    <!-- Change Facebook Dev Id -->
    <string name="facebook_app_id">201599816845832</string>
    <string name="fb_login_protocol_scheme">fb201599816845832</string>

    <!-- Change JW_LICENSE_KEY -->
    <string name="jw_license_key">yQuEvvWqfVygWoZknn6VHDkXtjAZXoeLc+pWGg==</string>

    <string name="slogan">Videos and shorts</string>
    <string name="fm_version">Version %s</string>
    <string name="cm_submit">Submit</string>
    <string name="cm_ok">Ok</string>
    <string name="cm_cancel">Cancel</string>

    <!-- Tab Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_trending">Trending</string>
    <string name="menu_watch_list">Watch List</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_search">Search Video</string>
    <string name="menu_news">News</string>
    <string name="menu_my_download">My Download</string>
    <string name="home_latest">Latest</string>
    <string name="home_most_view">Most View</string>
    <string name="menu_favourite">My Favourite</string>
    <string name="menu_on_air">On Air</string>
    <string name="menu_completed">Completed</string>
    <string name="menu_series">Series</string>
    <string name="menu_more">More</string>

    <!-- News -->
    <string name="news_latest">Latest</string>
    <string name="news_categories">Categories</string>

    <!--Upload-->
    <string name="upload_choose_video">Choose Video File</string>
    <string name="upload_choose_thumbnail">Choose thumbnail</string>
    <string name="upload_categories">Categories</string>
    <string name="upload_thumbnail">Thumbnail</string>
    <string name="upload_description">Description</string>
    <string name="upload_video_title">Title</string>
    <string name="upload_select_categories">Select categories</string>
    <string name="menu_upload">Upload Video</string>

    <!-- Customer -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="re_new_password">Re-type New Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign Out</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="register">Register</string>
    <string name="view_as_guest">View as guest</string>
    <string name="email">Email</string>
    <string name="login_password_confirm">Confirm Password</string>
    <string name="login_with_facebook">Sign in with Facebook</string>
    <string name="login_with_sign_up">New to teleBang? Sign up now</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address_line">Address Line</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="zip_code">Post/ZIP Code</string>
    <string name="change_password">Change Password</string>
    <string name="change_profile">Change Profile</string>
    <string name="change_avatar">Change Avatar</string>

    <!-- Tab -->
    <string name="demo_title_custom_tab_icons1">Custom Tab Icons 1</string>

    <!-- other -->
    <string name="all_categories">All Categories</string>
    <string name="top_categories">Top Categories</string>
    <string name="suggest_categories">Category Suggest</string>
    <string name="suggest_video">Suggest Video</string>

    <!-- Message -->
    <string name="msg_forgot_pass_notice">Please enter the email you used to register. Check your email for the instruction to receive your password</string>
    <string name="no_internet">You need Internet connection to use our application. Please check your device\'s connection settings</string>
    <string name="msg_loading">Loading... Please wait</string>
    <string name="msg_loading_content">Please wait while the content loads</string>
    <string name="msg_forgot_pass_success">An email will be sent to you with reset password link</string>
    <string name="msg_register_success">Create account successful</string>
    <string name="msg_request_login">You need to login to continue</string>
    <string name="msg_delete_video">Are you sure you want to delete this video?</string>
    <string name="msg_cannot_sign_in">The user name or password for Yo365 is incorrect</string>
    <string name="msg_password_error_size">Please choose a password between 6-20 characters</string>
    <string name="msg_change_pass_success">Password updated successfully</string>
    <string name="msg_update_acc_success">Profile updated successfully</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>


    <string name="card_number">Card number</string>
    <string name="cvv">CVV</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
