<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgr_login"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/tool_bar_top_padding"
        android:layout_weight="0.7">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="30dp"
            android:src="@drawable/yo365_logo" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayoutContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.3"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtUsername"
                style="@style/EditText.Common"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_edt_username"
                android:drawablePadding="10dp"
                android:hint="@string/username"
                android:padding="15dp"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/edtPassword"
                style="@style/EditText.Common"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_edt_password"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textSize="13sp" />

            <CheckBox
                android:id="@+id/cbnRemember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.7"
                android:button="@drawable/ic_checkbox_common_selector"
                android:text="Remember me?"
                android:textColor="#E2E0E0"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btnLogin"
                style="@style/Button.Common"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:text="@string/sign_in"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/tvnForgotPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.7"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="#E2E0E0"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnFacebook"
                style="@style/Button.Common"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#3B5998"
                android:drawableLeft="@drawable/ic_btn_facebook"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/login_with_facebook"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/tvnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ic_sign_up_right"
                android:gravity="center"
                android:text="@string/login_with_sign_up"
                android:textColor="#E2E0E0"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>

