<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgr_login"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/tool_bar_top_padding"
        android:layout_weight="0.7">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:src="@drawable/yo365_logo" />

        <com.inspius.coreapp.widget.InspiusTintableImageView
            android:id="@+id/imvHeaderBack"
            android:layout_width="@dimen/tab_height"
            android:layout_height="@dimen/tab_height"
            android:padding="10dp"
            android:src="@drawable/ic_action_back"
            app:tint="@color/custom_icon_while_selector" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayoutContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.3"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <EditText
                android:id="@+id/edtUsername"
                style="@style/EditText.Common"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_edt_username"
                android:drawablePadding="10dp"
                android:hint="@string/username"
                android:padding="15dp"
                android:textSize="13sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/edtEmail"
                style="@style/EditText.Common"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_edt_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="13sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/edtPassword"
                style="@style/EditText.Common"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_edt_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textSize="13sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/edtPasswordVerify"
                style="@style/EditText.Common"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_edt_password"
                android:hint="@string/login_password_confirm"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textSize="13sp" />

            <CheckBox
                android:id="@+id/cbnTerm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:alpha="0.7"
                android:button="@drawable/ic_checkbox_common_selector"
                android:text="I agree to the Terms &#38; Conditions"
                android:textColor="#E2E0E0"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btnSubmit"
                style="@style/Button.Common"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textStyle="bold"></Button>


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnFacebook"
        style="@style/Button.Common"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="0"
        android:background="#3B5998"
        android:drawableLeft="@drawable/ic_btn_facebook"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/login_with_facebook"
        android:textAllCaps="false" />
</LinearLayout>

