<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_subscription"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.neo2.telebang.activity.SubscriptionActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="You will be charged 25 NGR"
        android:textColor="#000000"
        android:textAlignment="center"
        />
    <com.wang.avi.AVLoadingIndicatorView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/avloadingIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:indicatorColor="@color/loading_ball"
        app:indicatorName="BallTrianglePathIndicator" />
    <RelativeLayout
        android:id="@+id/layout_custom_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:layout_centerInParent="true"
        >

        <LinearLayout
            android:id="@+id/layout_card_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/card_number"
                android:inputType="number"
                android:minEms="8"
                android:text=""
                />

            <EditText
                android:id="@+id/edit_cvc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/cvv"
                android:inputType="number"
                android:maxLength="4"
                android:minEms="4"
                android:text=""/>
        </LinearLayout>

        <View
            android:id="@+id/divider_horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/edit_expiry_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_card_num"
            android:layout_toLeftOf="@id/divider_horizontal"
            android:gravity="right"
            android:hint="@string/mm"
            android:inputType="number"
            android:maxEms="3"
            android:maxLength="2"
            android:text=""/>

        <EditText
            android:id="@+id/edit_expiry_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_card_num"
            android:layout_toRightOf="@id/divider_horizontal"
            android:gravity="left"
            android:hint="@string/yyyy"
            android:inputType="number"
            android:maxEms="4"
            android:maxLength="4"
            android:text=""/>

        <Button
            android:id="@+id/button_perform_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_expiry_year"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="Charge"/>
    </RelativeLayout>
</RelativeLayout>
